[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/zombie.png" type="Texture" id=1]
[ext_resource path="res://scripts/Zombie.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 35.0143

[sub_resource type="CircleShape2D" id=3]
radius = 200.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 10 )

[node name="Zombie" type="KinematicBody2D" groups=["zombie"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="IdLabel" type="Label" parent="."]
margin_left = -20.0
margin_top = -56.0
margin_right = 20.0
margin_bottom = -42.0

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 2
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 1 )
shape = SubResource( 1 )

[node name="SightRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightRange"]
shape = SubResource( 3 )

[node name="Mouth" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouth"]
position = Vector2( 10, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="SightRange" to="." method="_on_SightRange_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_SightRange_body_exited"]
[connection signal="body_entered" from="Mouth" to="." method="_on_Mouth_body_entered"]
